--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@
   branches:
     only:
       - master
-      - /*release.*/
+      - release/0.1
   install:
     - choco install gitversion.portable -pre -y
   test: off
