--- a/Caliburn.Micro.TestingHelpers/packages.config
+++ b/Caliburn.Micro.TestingHelpers/packages.config
@@ -3,7 +3,9 @@
   <package id="Caliburn.Micro" version="2.0.2" targetFramework="net452" />
   <package id="Caliburn.Micro.Core" version="2.0.2" targetFramework="net452" />
   <package id="coveralls.io" version="1.3.4" targetFramework="net452" />
+  <package id="FluentAssertions" version="4.2.1" targetFramework="net452" />
   <package id="GitVersionTask" version="3.3.0" targetFramework="net452" developmentDependency="true" />
+  <package id="NUnit" version="3.0.1" targetFramework="net452" />
   <package id="NUnit.Console" version="3.0.1" targetFramework="net452" />
   <package id="NUnit.Runners" version="3.0.1" targetFramework="net452" />
   <package id="OneClickBuild" version="1.8.0" targetFramework="net452" developmentDependency="true" />
